--- a/2.model_1.1.ipynb
+++ b/2.model_1.1.ipynb
@@ -9,14 +9,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 356 ms, sys: 28 ms, total: 384 ms\n",
-      "Wall time: 386 ms\n"
+      "CPU times: user 444 ms, sys: 32 ms, total: 476 ms\n",
+      "Wall time: 480 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "reload_data = True\n",
+    "reload_data = False\n",
     "\n",
     "import joblib, time, os, copy, datetime\n",
     "import numpy as np\n",
@@ -26,11 +26,15 @@
     "import torch\n",
     "import torchvision\n",
     "\n",
+    "from torch.nn import *\n",
+    "from torch.nn.functional import *\n",
+    "\n",
     "#enable it when running in google cloud, to upload/download file from/to VM to/from google cloud bucket\n",
     "from google.cloud import storage\n",
     "\n",
     "bucket_root_path = \"weicheng\"\n",
-    "project_data_folder = \"data/breakfast-img-data/\""
+    "project_data_folder = \"data/breakfast-img-data/\"\n",
+    "torch.manual_seed(0)"
    ]
   },
   {
@@ -194,7 +198,42 @@
     "    print('Best val Acc: {:4f}'.format(best_acc))\n",
     "\n",
     "    model.load_state_dict(best_model_wts)\n",
-    "    return model, val_acc_history"
+    "    return model, val_acc_history\n",
+    "\n",
+    "\n",
+    "class MyNet(Module):\n",
+    "    def __init__(self, batch_size, num_classes):\n",
+    "        super(MyNet, self).__init__()\n",
+    "        self.conv1 = Conv2d(in_channels=1, out_channels=batch_size, kernel_size=3, padding=1)\n",
+    "        self.conv1_bn = BatchNorm2d(num_features=batch_size)\n",
+    "        self.conv2 = Conv2d(in_channels=batch_size, out_channels=batch_size*2, kernel_size=3, padding=1)\n",
+    "        self.conv2_bn = BatchNorm2d(num_features=batch_size*2)\n",
+    "        self.conv3 = Conv2d(in_channels=batch_size*2, out_channels=batch_size*4, kernel_size=3, padding=1)\n",
+    "        self.conv3_bn = BatchNorm2d(num_features=batch_size*4)\n",
+    "        self.conv4 = Conv2d(in_channels=batch_size*4, out_channels=batch_size*8, kernel_size=3, padding=1)\n",
+    "        self.conv4_bn = BatchNorm2d(num_features=batch_size*8)\n",
+    "        self.pool = MaxPool2d(2, 2)\n",
+    "        self.drop1 = Dropout(0.5)\n",
+    "        self.linear1 = Linear(in_features=batch_size*8, out_features=batch_size*4)\n",
+    "        self.linear2 = Linear(in_features=batch_size*4, out_features=num_classes)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.pool(relu(self.conv1_bn(self.conv1(x))))\n",
+    "        #print(\"conv1\", x.shape)\n",
+    "        x = self.pool(relu(self.conv2_bn(self.conv2(x))))\n",
+    "        #print(\"conv2\",x.shape)\n",
+    "        x = self.pool(relu(self.conv3_bn(self.conv3(x))))\n",
+    "        #print(\"conv3\",x.shape)\n",
+    "        x = self.pool(relu(self.conv4_bn(self.conv4(x))))\n",
+    "        #print(\"conv4\",x.shape)\n",
+    "        x = self.drop1(x)\n",
+    "        x = x.view(-1, 512) \n",
+    "        #print(\"x.view\",x.shape)\n",
+    "        x = relu(self.linear1(x))\n",
+    "        #print(\"linear1\",x.shape)\n",
+    "        x = self.drop1(x) \n",
+    "        x = softmax(self.linear2(x))\n",
+    "        return x    "
    ]
   },
   {
@@ -206,16 +245,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Download from data/breakfast-img-data/model_1.0.model to local model_1.0.model\n",
-      "Download from data/breakfast-img-data/submission_1.0_max.csv to local submission_1.0_max.csv\n",
-      "Download from data/breakfast-img-data/submission_1.0_mean.csv to local submission_1.0_mean.csv\n",
-      "Download from data/breakfast-img-data/test_feature.joblib to local test_feature.joblib\n",
-      "Download from data/breakfast-img-data/test_segment.txt to local test_segment.txt\n",
-      "Download from data/breakfast-img-data/train_feature.joblib to local train_feature.joblib\n",
-      "Download from data/breakfast-img-data/train_label.joblib to local train_label.joblib\n",
-      "Download from data/breakfast-img-data/training_segment.txt to local training_segment.txt\n",
-      "CPU times: user 54.3 s, sys: 16.9 s, total: 1min 11s\n",
-      "Wall time: 2min 10s\n"
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 7.15 µs\n"
      ]
     }
    ],
@@ -245,8 +276,8 @@
       "dtypes: int64(1), object(1)\n",
       "memory usage: 43.6+ MB\n",
       "None\n",
-      "CPU times: user 39.9 s, sys: 10.8 s, total: 50.7 s\n",
-      "Wall time: 1min 4s\n"
+      "CPU times: user 50.7 s, sys: 11.8 s, total: 1min 2s\n",
+      "Wall time: 1min 2s\n"
      ]
     }
    ],
@@ -268,7 +299,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2855174 entries, 2647401 to 903350\n",
+      "Int64Index: 2855174 entries, 2731272 to 697142\n",
       "Data columns (total 2 columns):\n",
       " #   Column   Dtype \n",
       "---  ------   ----- \n",
@@ -277,8 +308,8 @@
       "dtypes: int64(1), object(1)\n",
       "memory usage: 65.3+ MB\n",
       "None\n",
-      "CPU times: user 1min 34s, sys: 764 ms, total: 1min 35s\n",
-      "Wall time: 1min 35s\n"
+      "CPU times: user 2min 24s, sys: 1.14 s, total: 2min 25s\n",
+      "Wall time: 2min 25s\n"
      ]
     }
    ],
@@ -303,8 +334,8 @@
       "len(train_loader.dataset) =  2798070\n",
       "len(val_loader.dataset) =  28551\n",
       "len(test_loader.dataset) =  28553\n",
-      "CPU times: user 8.53 s, sys: 3.72 s, total: 12.3 s\n",
-      "Wall time: 11.1 s\n"
+      "CPU times: user 10.2 s, sys: 4.2 s, total: 14.4 s\n",
+      "Wall time: 13.2 s\n"
      ]
     }
    ],
@@ -449,44 +480,6 @@
     }
    ],
    "source": [
-    "from torch.nn import *\n",
-    "from torch.nn.functional import *\n",
-    "\n",
-    "class MyNet(Module):\n",
-    "    def __init__(self, batch_size, num_classes):\n",
-    "        super(MyNet, self).__init__()\n",
-    "        self.conv1 = Conv2d(in_channels=1, out_channels=batch_size, kernel_size=3, padding=1)\n",
-    "        self.conv1_bn = BatchNorm2d(num_features=batch_size)\n",
-    "        self.conv2 = Conv2d(in_channels=batch_size, out_channels=batch_size*2, kernel_size=3, padding=1)\n",
-    "        self.conv2_bn = BatchNorm2d(num_features=batch_size*2)\n",
-    "        self.conv3 = Conv2d(in_channels=batch_size*2, out_channels=batch_size*4, kernel_size=3, padding=1)\n",
-    "        self.conv3_bn = BatchNorm2d(num_features=batch_size*4)\n",
-    "        self.conv4 = Conv2d(in_channels=batch_size*4, out_channels=batch_size*8, kernel_size=3, padding=1)\n",
-    "        self.conv4_bn = BatchNorm2d(num_features=batch_size*8)\n",
-    "        self.pool = MaxPool2d(2, 2)\n",
-    "        self.drop1 = Dropout(0.5)\n",
-    "        self.linear1 = Linear(in_features=batch_size*8, out_features=batch_size*4)\n",
-    "        self.linear2 = Linear(in_features=batch_size*4, out_features=num_classes)\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        x = self.pool(relu(self.conv1_bn(self.conv1(x))))\n",
-    "        #print(\"conv1\", x.shape)\n",
-    "        x = self.pool(relu(self.conv2_bn(self.conv2(x))))\n",
-    "        #print(\"conv2\",x.shape)\n",
-    "        x = self.pool(relu(self.conv3_bn(self.conv3(x))))\n",
-    "        #print(\"conv3\",x.shape)\n",
-    "        x = self.pool(relu(self.conv4_bn(self.conv4(x))))\n",
-    "        #print(\"conv4\",x.shape)\n",
-    "        x = self.drop1(x)\n",
-    "        x = x.view(-1, 512) \n",
-    "        #print(\"x.view\",x.shape)\n",
-    "        x = relu(self.linear1(x))\n",
-    "        #print(\"linear1\",x.shape)\n",
-    "        x = self.drop1(x) \n",
-    "        x = softmax(self.linear2(x))\n",
-    "        return x\n",
-    "    \n",
-    "\n",
     "use_cuda = torch.cuda.is_available()\n",
     "device = torch.device(\"cuda:0\" if use_cuda else \"cpu\")\n",
     "#turn on cpu for troubleshooting as gpu doesnt throw proper error message, runing in cpu shows more specific error message\n",
@@ -517,43 +510,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/ipykernel_launcher.py:35: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy of test data: 48.26813294575001\n",
-      "CPU times: user 8.34 s, sys: 3.26 s, total: 11.6 s\n",
-      "Wall time: 11.6 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "correct = 0\n",
-    "total = 0\n",
-    "with torch.no_grad():\n",
-    "    for data in test_loader:\n",
-    "        inputs, labels = data[0].to(device), data[1].to(device)\n",
-    "        outputs = model_ft(inputs)\n",
-    "        _, predicted = torch.max(outputs.data, 1)\n",
-    "        total += labels.size(0)\n",
-    "        correct += (predicted == labels).sum().item()\n",
-    "\n",
-    "print('Accuracy of test data: {0}'.format(100 * correct / total))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -569,14 +525,14 @@
    ],
    "source": [
     "%%time\n",
-    "model_name = \"model_1.1_baseline.model\"\n",
+    "model_name = \"model_1.1_baseline.model\" #renamed to model_1.1.model\n",
     "torch.save(model_ft.state_dict(), model_name)\n",
     "upload_files([model_name])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -584,8 +540,8 @@
      "output_type": "stream",
      "text": [
       "cuda:0\n",
-      "CPU times: user 120 ms, sys: 4 ms, total: 124 ms\n",
-      "Wall time: 27.2 ms\n"
+      "CPU times: user 124 ms, sys: 40 ms, total: 164 ms\n",
+      "Wall time: 35.1 ms\n"
      ]
     },
     {
@@ -594,56 +550,59 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "class MyNet(Module):\n",
-    "    def __init__(self, batch_size, num_classes):\n",
-    "        super(MyNet, self).__init__()\n",
-    "        self.conv1 = Conv2d(in_channels=1, out_channels=batch_size, kernel_size=3, padding=1)\n",
-    "        self.conv1_bn = BatchNorm2d(num_features=batch_size)\n",
-    "        self.conv2 = Conv2d(in_channels=batch_size, out_channels=batch_size*2, kernel_size=3, padding=1)\n",
-    "        self.conv2_bn = BatchNorm2d(num_features=batch_size*2)\n",
-    "        self.conv3 = Conv2d(in_channels=batch_size*2, out_channels=batch_size*4, kernel_size=3, padding=1)\n",
-    "        self.conv3_bn = BatchNorm2d(num_features=batch_size*4)\n",
-    "        self.conv4 = Conv2d(in_channels=batch_size*4, out_channels=batch_size*8, kernel_size=3, padding=1)\n",
-    "        self.conv4_bn = BatchNorm2d(num_features=batch_size*8)\n",
-    "        self.pool = MaxPool2d(2, 2)\n",
-    "        self.drop1 = Dropout(0.5)\n",
-    "        self.linear1 = Linear(in_features=batch_size*8, out_features=batch_size*4)\n",
-    "        self.linear2 = Linear(in_features=batch_size*4, out_features=num_classes)\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        x = self.pool(relu(self.conv1_bn(self.conv1(x))))\n",
-    "        #print(\"conv1\", x.shape)\n",
-    "        x = self.pool(relu(self.conv2_bn(self.conv2(x))))\n",
-    "        #print(\"conv2\",x.shape)\n",
-    "        x = self.pool(relu(self.conv3_bn(self.conv3(x))))\n",
-    "        #print(\"conv3\",x.shape)\n",
-    "        x = self.pool(relu(self.conv4_bn(self.conv4(x))))\n",
-    "        #print(\"conv4\",x.shape)\n",
-    "        x = self.drop1(x)\n",
-    "        x = x.view(-1, 512) \n",
-    "        #print(\"x.view\",x.shape)\n",
-    "        x = relu(self.linear1(x))\n",
-    "        #print(\"linear1\",x.shape)\n",
-    "        x = self.drop1(x) \n",
-    "        x = softmax(self.linear2(x))\n",
-    "        return x\n",
-    "    \n",
     "use_cuda = torch.cuda.is_available()\n",
     "device = torch.device(\"cuda:0\" if use_cuda else \"cpu\")\n",
     "#turn on cpu for troubleshooting as gpu doesnt throw proper error message, runing in cpu shows more specific error message\n",
     "#device = torch.device(\"cpu\") \n",
     "print(device)\n",
     "\n",
-    "model_name = \"model_1.1_baseline.model\"\n",
+    "model_name = \"model_1.1.model\"\n",
     "model = MyNet(64, 47).double().to(device)\n",
     "model.load_state_dict(torch.load(model_name, map_location=device)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/ipykernel_launcher.py:190: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of test data: 48.14542397814437\n",
+      "CPU times: user 6.21 s, sys: 1.58 s, total: 7.8 s\n",
+      "Wall time: 7.79 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "with torch.no_grad():\n",
+    "    for data in val_loader:\n",
+    "        inputs, labels = data[0].to(device), data[1].to(device)\n",
+    "        outputs = model(inputs)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "print('Accuracy of test data: {0}'.format(100 * correct / total))"
    ]
   },
   {
