--- a/old_1/2.model_1.0_baseline.ipynb
+++ b/old_1/2.model_1.0_baseline.ipynb
@@ -194,7 +194,27 @@
     "    print('Best val Acc: {:4f}'.format(best_acc))\n",
     "\n",
     "    model.load_state_dict(best_model_wts)\n",
-    "    return model, val_acc_history"
+    "    return model, val_acc_history\n",
+    "\n",
+    "class MyNet(torch.nn.Module):\n",
+    "    def __init__(self, num_classes):\n",
+    "        super(MyNet, self).__init__()\n",
+    "        self.conv1 = torch.nn.Conv2d(1, 64, 3, padding=1)\n",
+    "        self.conv2 = torch.nn.Conv2d(64, 128, 3, padding=1)\n",
+    "        self.conv3 = torch.nn.Conv2d(128, 256, 3, padding=1)\n",
+    "        self.pool = torch.nn.MaxPool2d(2, 2)\n",
+    "        self.linear1 = torch.nn.Linear(1024, 512)\n",
+    "        self.linear2 = torch.nn.Linear(512, num_classes)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.pool(torch.nn.functional.relu(self.conv1(x)))\n",
+    "        x = self.pool(torch.nn.functional.relu(self.conv2(x)))\n",
+    "        x = self.pool(torch.nn.functional.relu(self.conv3(x)))\n",
+    "        x = x.view(-1, 1024)\n",
+    "        x = torch.nn.functional.relu(self.linear1(x))\n",
+    "        #x = torch.nn.functional.softmax(self.linear2(x))\n",
+    "        x = self.linear2(x)\n",
+    "        return x "
    ]
   },
   {
@@ -417,26 +437,6 @@
     }
    ],
    "source": [
-    "class MyNet(torch.nn.Module):\n",
-    "    def __init__(self, num_classes):\n",
-    "        super(MyNet, self).__init__()\n",
-    "        self.conv1 = torch.nn.Conv2d(1, 64, 3, padding=1)\n",
-    "        self.conv2 = torch.nn.Conv2d(64, 128, 3, padding=1)\n",
-    "        self.conv3 = torch.nn.Conv2d(128, 256, 3, padding=1)\n",
-    "        self.pool = torch.nn.MaxPool2d(2, 2)\n",
-    "        self.linear1 = torch.nn.Linear(1024, 512)\n",
-    "        self.linear2 = torch.nn.Linear(512, num_classes)\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        x = self.pool(torch.nn.functional.relu(self.conv1(x)))\n",
-    "        x = self.pool(torch.nn.functional.relu(self.conv2(x)))\n",
-    "        x = self.pool(torch.nn.functional.relu(self.conv3(x)))\n",
-    "        x = x.view(-1, 1024)\n",
-    "        x = torch.nn.functional.relu(self.linear1(x))\n",
-    "        #x = torch.nn.functional.softmax(self.linear2(x))\n",
-    "        x = self.linear2(x)\n",
-    "        return x \n",
-    "\n",
     "use_cuda = torch.cuda.is_available()\n",
     "device = torch.device(\"cuda:0\" if use_cuda else \"cpu\")\n",
     "#turn on cpu for troubleshooting as gpu doesnt throw proper error message, runing in cpu shows more specific error message\n",
@@ -544,26 +544,6 @@
    ],
    "source": [
     "%%time\n",
-    "class MyNet(torch.nn.Module):\n",
-    "    def __init__(self, num_classes):\n",
-    "        super(MyNet, self).__init__()\n",
-    "        self.conv1 = torch.nn.Conv2d(1, 64, 3, padding=1)\n",
-    "        self.conv2 = torch.nn.Conv2d(64, 128, 3, padding=1)\n",
-    "        self.conv3 = torch.nn.Conv2d(128, 256, 3, padding=1)\n",
-    "        self.pool = torch.nn.MaxPool2d(2, 2)\n",
-    "        self.linear1 = torch.nn.Linear(1024, 512)\n",
-    "        self.linear2 = torch.nn.Linear(512, num_classes)\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        x = self.pool(torch.nn.functional.relu(self.conv1(x)))\n",
-    "        x = self.pool(torch.nn.functional.relu(self.conv2(x)))\n",
-    "        x = self.pool(torch.nn.functional.relu(self.conv3(x)))\n",
-    "        x = x.view(-1, 1024)\n",
-    "        x = torch.nn.functional.relu(self.linear1(x))\n",
-    "        #x = torch.nn.functional.softmax(self.linear2(x))\n",
-    "        x = self.linear2(x)\n",
-    "        return x \n",
-    "\n",
     "use_cuda = torch.cuda.is_available()\n",
     "device = torch.device(\"cuda:0\" if use_cuda else \"cpu\")\n",
     "#turn on cpu for troubleshooting as gpu doesnt throw proper error message, runing in cpu shows more specific error message\n",
